test/bad/duplicate_model.veld
// BAD: duplicate model name
model User {
  id: string
}

model User {
  name: string
}

